# kata-codecrafters-shell

./: .gitignore  Cargo.toml  README.md
src/: arguments.rs  autocomplete.rs  builtin.rs  input.rs  io.rs  io_redirection.rs  main.rs  parser.rs  parsing.rs  path.rs  quoting.rs  runner.rs
src/parser/: quoting.rs  splitting.rs
