[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Nicolas Séverin <me@nseverin.fr>"]
edition = "2021"

[dependencies]
crossterm = "^0.28.1" # Cross-platform low-level terminal access.
is_executable = "^1.0.4" # Cross-platform executable file checker.
thiserror = "^2.0.11" # Error handling.
strum = "^0.27.0" # Enum serialization.
strum_macros = "^0.27.0"
