[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Nicolas Séverin <me@nseverin.fr>"]
edition = "2021"

[dependencies]
crossterm = "^0.29.0" # Cross-platform low-level terminal access.
is_executable = "^1.0.4" # Cross-platform executable file checker.
regex = "^1.11.2" # Regular expressions.
strum = "^0.27.0" # Enum serialization.
strum_macros = "^0.27.0"
thiserror = "^2.0.11" # Error handling.
